--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,3 @@
 html, body {
-  @apply bg-white dark:bg-dark font-sans text-gray-600 dark:text-gray-300
+  @apply font-sans text-gray-600 dark:text-gray-300
 }
